[package]
name = "rust_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main"}
async-std = {version = "1.9.0", features = ["attributes"]}
tokio = { version = "0.3.3", features = ["full"] }
